package elevator.enums;

public enum Direction {
    MOVING_UP,
    MOVING_DOWN
}
