package elevator.enums;

public enum State {
    MOVING,
    IDLE
}
